--- a/CLSS.ExtensionMethods.IDictionary.GetOrAdd.csproj
+++ b/CLSS.ExtensionMethods.IDictionary.GetOrAdd.csproj
@@ -7,6 +7,8 @@
     <Authors>TonyGiang</Authors>
     <Description>An extension method to provide GetOrAdd as found in ConcurrentDictionary to every IDictionary type. A part of the C# Language Syntactic Sugar suite.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/tonygiang/CLSS.ExtensionMethods.IDictionary.GetOrAdd</RepositoryUrl>
+    <PackageTags>CLSS</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
